<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charly Parking Apps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sliding_map">Map</string>
    <string name="sliding_car">Car</string>
    <string name="sliding_search">Search</string>
    <string name="sliding_profile">Profile</string>
    <string name="sliding_settings">Settings</string>
    <string name="sliding_logout">Logout</string>
    <string name="id_user_pref">0</string>
    <string name="logout">Log out</string>
    <string name="test">test</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="menu">Menu</string>
    <string name="defibrilator">defibrilator</string>
    <string name="fuel">fuel</string>
    <string name="diesel">diesel</string>
    <string name="lpg">lpg</string>
    <string name="ethanol">ethanol</string>
    <string name="total_places">total places</string>
    <string name="free_places">free places</string>
    <string name="one_free_place">Show only parking with at least one free place</string>
    <string name="handicaped_spot">Handicaped spots</string>
    <string name="favorites">favorites</string>
    <string name="using_parkings">used now</string>
    <string name="my_parkings">my parkings</string>
    <string name="sort">sort</string>
    <string name="max_price">Maximum price</string>
    <string name="search">search</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="edit_profile">Edit profile</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="validate">Validate</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="remove_car">Remove this car</string>
    <string name="title_activity_car_edit">CarEditActivity</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="modifs_saved">Modifications saved</string>
    <string name="action_add_car">Add a new car</string>
    <string name="height_colon">Height:</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history_list">Previous Parkings where you went</string>
    <string name="stationnary_list">Parking where you are currently parked</string>
    <string name="action_show_all_cars_map">Show all cars on map</string>
    <string name="action_show_parked_cars_map">Show parked cars on map</string>
	<string name="name">Name: </string>
	<string name="title_activity_parking_edit">Edit Parking</string>
	<string name="add_parking">Add parking</string>
	<string name="address">Address</string>
	<string name="num">No</string>
	<string name="street">Street</string>
	<string name="zip">Zip</string>
	<string name="city">City</string>
	<string name="country">Country</string>
	<string name="p">P</string>
	<string name="m">M</string>
	<string name="become_manager">Become manager</string>
	<string name="you_are_manager">You became manager !</string>
	<string name="already_manager">You are already manager !</string>
    <string name="car">Car: </string>
    <string name="parking">Parking: </string>
    <string name="time">Time: </string>
    <string name="from">From: </string>
    <string name="hour_time_separator"> hours and </string>
    <string name="minutes_time_separator">minutes.</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="action_add_parking">Add Parking</string>
    <string name="action_show_all_parkings_map">Show my parkings on map</string>
	<string name="radius">Radius (Km) : </string>
	<string name="action_use_parking">Park Here!</string>
	<string name="action_use_parking_end">Leave this parking</string>
	<string name="remove_parking">Remove parking</string>
	<string name="not_manager">You cannot manage parkings !</string>
	<string name="no_car">You need to add and select a car</string>
	
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
	<string name="hour">hour</string>
	<string name="hours">hours</string>
	<string name="euro">€/h</string>
	<string name="closed">Closed</string>
	
</resources>
