<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/sliding_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_map"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/sliding_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_car"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/sliding_tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_profile"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/sliding_tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_search"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/sliding_tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/sliding_tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliding_logout"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
