<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <TextView
        android:id="@+id/cars_item_secondLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cars_item_firstLine"
        android:layout_alignParentBottom="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:clickable="true"
        android:focusable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/cars_item_firstLine"
        android:layout_width="fill_parent"
        android:layout_height="16dip"
        android:layout_above="@+id/cars_item_secondLine"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/cars_row_parking"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cars_item_secondLine"
        android:layout_toLeftOf="@+id/cars_row_car_map"
        android:text="@string/p" />

    <Button
        android:id="@+id/cars_row_car_map"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cars_item_secondLine"
        android:layout_alignRight="@+id/cars_item_secondLine"
        android:contentDescription="@string/app_name"
        android:text="@string/m" />

    <RadioButton
        android:id="@+id/selected_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cars_row_parking"
        android:layout_alignBottom="@+id/cars_row_parking"
        android:layout_toLeftOf="@+id/cars_row_parking" />

</RelativeLayout>